feat: 보너스 번호 입력 받는 기능 구현
조건에대해 옳은 보너스 번호를 입력할때까지 입력받기를 반복함